Menu: user menu text align ment issue has been solved.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -315,6 +315,7 @@ body {
   background: none repeat scroll 0 0 #FFFFFF;
     border-radius: 6px 6px 0 0;
     color: #9ACD32;
+    
 }
 
 #menu-bar ul li a.active {
@@ -338,7 +339,8 @@ body {
 
 #menu-bar ul li a.home.active {  
  background:url(/images/hover.png) no-repeat 16px 6px #FFFFFF;
-    border-radius: 6px 6px 0 0;
+ background-position:center; 
+ border-radius: 6px 6px 0 0;
 }
 
 #menu-bar  ul li.last{ 
@@ -356,7 +358,7 @@ body {
     float: left;
     font-size: 14px;
     font-weight: normal;
-    line-height: 19px;
+    line-height: 25px;
     padding: 6px 14px 5px;
     text-decoration: none;
     width:48px;
@@ -375,9 +377,9 @@ body {
 }
 #menu-bar  ul li a.home{
 	  float: left;
-    height: 23px;
+    height: 24px;
     margin-bottom: 0;
-    margin-top: -3px;
+    margin-top: -4px;
     padding-bottom: 4px;
     width: 22px;
     background:url(/images/nav-home-white.png) no-repeat 16px 6px;}
